# flowistry

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  crates.js  help.html  install.sh  main.js  repos.sh  rust-toolchain.toml  rustc.config.toml  rustdoc.css  search-index.js  settings.html  source-files.js  src-files.js
cli/: Cargo.toml
cli/src/: main.rs
crates/flowistry/: Cargo.toml  README.md
crates/flowistry/benches/: README.md  main.rs
crates/flowistry/examples/: example.rs
crates/flowistry/src/: cached.rs  extensions.rs  lib.rs  range.rs  source_map.rs  test_utils.rs  timer.rs
crates/flowistry/src/indexed/: impls.rs  mod.rs
crates/flowistry/src/infoflow/: analysis.rs  dependencies.rs  mod.rs  mutation.rs  recursive.rs
crates/flowistry/src/mir/: aliases.rs  borrowck_facts.rs  control_dependencies.rs  engine.rs  mod.rs  mutations.rs  placeinfo.rs  utils.rs
crates/flowistry/src/pdg/: construct.rs  graph.rs  mod.rs  utils.rs  value.rs
crates/flowistry/src/source_map/: find_bodies.rs  hir_span.rs  mir_span.rs  mod.rs  range.rs  span_tree.rs  spanner.rs
crates/flowistry/tests/: mutations.rs  pdg.rs  slicing.rs
crates/flowistry/tests/backward_slice/: array_read.txt.expected  array_write.txt.expected  async_simple.txt  async_simple.txt.expected  async_two_await.txt  async_two_await.txt.expected  box_move.txt  box_move.txt.expected  box_write.txt  box_write.txt.expected  closure_read_upvar.txt  closure_slice_inner_write_inner.txt.expected  closure_slice_inner_write_outer.txt.expected  early_return_drop.txt  early_return_drop.txt.expected  early_return_option.txt  early_return_option.txt.expected  early_return_output.txt.expected  early_return_simple.txt  early_return_simple.txt.expected  enum_write_branch_read_branch.txt.expected  enum_write_branch_read_whole.txt.expected  forloop_some_relevant.txt  forloop_some_relevant.txt.expected  function_arg_pattern.txt  function_arg_pattern.txt.expected  function_arg_pointer_deep.txt  function_lifetime_alias_mut.txt.expected  function_mut_ptr_param.txt.expected  function_mut_ptr_param_field.txt  function_mut_ptr_param_field.txt.expected  function_param.txt  function_param.txt.expected  function_param_field_independence.txt  function_param_field_independence.txt.expected  function_ref_in_ret.txt.expected  function_ret.txt.expected  function_ret_not_sliced.txt  function_ret_not_sliced.txt.expected  generic_param.txt  (+126 more)
crates/flowistry/tests/extensions/: recurse_cache.txt.expected  recurse_child_privacy.txt  recurse_no_definition.txt  recurse_no_definition.txt.expected  recurse_not_all_args.txt  recurse_not_all_args.txt.expected  recurse_project_dst.txt.expected  recurse_project_src.txt  recurse_recursive.txt  recurse_recursive.txt.expected  recurse_return_field_sensitive.txt  recurse_return_field_sensitive.txt.expected
crates/flowistry/tests/find_mutations/: array_mut_ptr_mutate_index.txt  basic_variable_reassign.txt  mutable_function_arg.txt.expected  struct_method_mutable_self.txt.expected  struct_mut_ptr_function.txt  struct_mut_ptr_function.txt.expected  struct_write_find_only_field.txt.expected  tuple_field_mutable_ref_mutation.txt  tuple_field_mutable_ref_mutation.txt.expected  tuple_field_write_find_only_field.txt  tuple_field_write_find_only_field.txt.expected  tuple_field_write_find_whole_tuple.txt  update_mutable_borrow.txt.expected  vec_mut_ptr_mutate_index.txt  vec_mut_ptr_mutate_index.txt.expected
crates/flowistry/tests/forward_slice/: basic_slice_constant.txt  basic_slice_variable.txt  basic_slice_variable.txt.expected  basic_unused.txt  basic_unused.txt.expected  basic_update.txt.expected  condition.txt  condition.txt.expected  const_item.txt  const_item.txt.expected  control_dependent_param.txt  control_dependent_param.txt.expected  control_dependent_simple.txt  control_dependent_simple.txt.expected  function_params.txt  function_params.txt.expected  match_discriminant.txt  match_discriminant.txt.expected  match_one_branch.txt  match_one_branch.txt.expected  pointer_deep.txt  pointer_deep.txt.expected  pointer_write.txt  projection_basic.txt  projection_basic.txt.expected  return_keyword.txt  return_keyword.txt.expected  static_method.txt  static_method.txt.expected  struct_param.txt  struct_param.txt.expected  struct_pointers_deep.txt  struct_pointers_deep.txt.expected  time_calculation.txt  time_calculation.txt.expected  tuple_mutate_field.txt  tuple_mutate_field.txt.expected
crates/flowistry_ide/: Cargo.toml  README.md
crates/flowistry_ide/src/: analysis.rs  focus.rs  graph.rs  hir.rs  lib.rs  mutations.rs  playground.rs  plugin.rs  range.rs  slicing.rs  spans.rs
crates/flowistry_ide/src/decompose/: algo.rs  construct.rs  mod.rs
crates/flowistry_ide/src/effects/: mod.rs  visitor.rs
crates/flowistry_ide/src/focus/: direct_influence.rs  find_mutations.rs  mod.rs
crates/flowistry_ide/src/mutations/: find_mutations.rs  mod.rs
crates/flowistry_ide/tests/: backward_slice.rs  effects.rs  extensions.rs  forward_slice.rs  integration_tests.rs  mutations.rs  slicing.rs  utils.rs
crates/flowistry_ide/tests/backward_slice/: array_read.txt  array_write.txt  async_simple.txt.expected  closure_read_upvar.txt.expected  closure_slice_inner_write_inner.txt  closure_slice_inner_write_inner.txt.expected  closure_slice_inner_write_outer.txt  closure_slice_inner_write_outer.txt.expected  closure_write_upvar.txt  closure_write_upvar.txt.expected  enum_write_branch_read_branch.txt  enum_write_branch_read_branch.txt.expected  enum_write_branch_read_whole.txt  enum_write_branch_read_whole.txt.expected  function_lifetime_alias_mut.txt  function_mut_ptr_param.txt  function_mut_ptr_param_field.txt.expected  function_param.txt  function_param.txt.expected  function_param_field_independence.txt.expected  function_ref_in_ret.txt  function_ret.txt  function_ret.txt.expected  (+70 more)
crates/flowistry_ifc/: Cargo.toml
crates/flowistry_ifc/src/: analysis.rs  lib.rs
crates/rustc_plugin/: Cargo.toml
crates/rustc_plugin/src/: lib.rs
rust-slicer-eval/: Cargo.toml
rust-slicer-eval/src/: main.rs  visitor.rs
(+14907 files in other folders)
