[workspace]
members = ["crates/*"]
exclude = ["ide/src/tests/mock_project"]
resolver = "2"

[workspace.dependencies]
rustc_plugin = "=0.13.0-nightly-2025-03-03"
rustc_utils = { path = "../rustc_plugin/crates/rustc_utils", features = ["indexical"]}
indexical = {version = "0.7.0", default-features = false, features = ["rustc"]}

[profile.bench]
debug = true
