[workspace]
members = ["crates/*"]
exclude = ["ide/src/tests/mock_project"]
resolver = "2"

[workspace.dependencies]
rustc_plugin = "=0.14.2-nightly-2025-08-20"
rustc_utils = {version = "=0.14.2-nightly-2025-08-20", features = ["indexical"]}
indexical = {version = "0.9.3", default-features = false, features = ["rustc"]}

[profile.bench]
debug = true