[package]
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
edition = "2018"
name = "rust-slicer-cli"
version = "0.1.0"

[dependencies]
anyhow = "1"
clap = "2.33"
env_logger = "0.8"
generate-rustc-flags = {path = "../../generate-rustc-flags"}
log = "0.4"
rust-slicer = {path = ".."}
serde_json = "1.0"
