[package]
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
edition = "2018"
name = "rust-slicer-eval"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "2.33"
env_logger = "0.8"
generate-rustc-flags = {path = "../../generate-rustc-flags"}
log = "0.4"
rust-slicer = {path = ".."}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
