[package]
name = "flowistry"
version = "0.5.42"
edition = "2021"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
description = "Modular information flow analysis"
repository = "https://github.com/willcrichton/flowistry"
license = "MIT"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
test = ["rustc_utils/test"]
debug = ["html-escape"]

[dependencies]
anyhow = "1"
log = "0.4"
fluid-let = "1.0"
cfg-if = "1.0"
serde = {version = "1", features = ["derive"]}
rustc_utils = {workspace = true, features = ["indexical"]}
indexical = {workspace = true}

# For local debugging
html-escape = {version = "0.2", optional = true}

[dev-dependencies]
# Hack based on https://github.com/rust-lang/cargo/issues/2911
flowistry = { path = ".", features = ["test"] }
criterion = "0.5.1"
env_logger = {version = "0.9", default-features = false}
test-log = "0.2"
glob = "0.3.0"
bench_utils = { path = "../bench_utils" }
textwrap = {version = "0.14", default-features = false}

[[bench]]
name = "main"
harness = false
