[package]
name = "flowistry_ide"
version = "0.5.31"
edition = "2021"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
description = "Information Flow in the IDE for Rust"
repository = "https://github.com/willcrichton/flowistry"
license = "MIT"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
decompose = ["petgraph", "rayon"]

[dependencies]
flowistry = {version = "0.5.31", path = "../flowistry"}
rustc_plugin = {version = "0.5.31", path = "../rustc_plugin"}
anyhow = "1"
log = "0.4"
fluid-let = "1.0"
cfg-if = "1.0"
itertools = "0.10"
serde = {version = "1", features = ["derive"]}
serde_json = "1"

# Decompose
petgraph = {version = "0.6", default-features = false, optional = true}
rayon = {version = "1.5", optional = true}

# For binaries
env_logger = {version = "0.9", default-features = false}
clap = {version = "3.1", default-features = false, features = ["std", "derive"]}