[package]
name = "flowistry_ide"
version = "0.5.43"
edition = "2021"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
description = "Information Flow in the IDE for Rust"
repository = "https://github.com/willcrichton/flowistry"
license = "MIT"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
decompose = ["petgraph", "rayon"]

[dependencies]
flowistry = {version = "0.5.43", path = "../flowistry"}
anyhow = "1"
log = "0.4"
fluid-let = "1.0"
cfg-if = "1.0"
itertools = "0.10"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
flate2 = "1"
base64 = "0.21"
rustc_utils = {workspace = true, features = ["serde"]}
rustc_plugin = {workspace = true}
indexical = {workspace = true}

# Decompose
petgraph = {version = "0.6", default-features = false, optional = true}
rayon = {version = "1.5", optional = true}

# For binaries
env_logger = {version = "0.9", default-features = false}
clap = {version = "4.4", default-features = false, features = ["std", "derive"]}