[package]
name = "flowistry_ifc"
version = "0.5.39"
edition = "2021"
publish = false

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
flowistry = {version = "0.5.39", path = "../flowistry"}
env_logger = "0.9"
termcolor = "1.1"
anyhow = "1"
log = "0.4"
rustc_plugin = "0.7.1-nightly-2023-08-25"
rustc_utils = "0.7.1-nightly-2023-08-25"