[package]
name = "flowistry_ifc"
version = "0.5.43"
edition = "2021"
publish = false

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
flowistry = {version = "0.5.43", path = "../flowistry"}
env_logger = "0.9"
termcolor = "1.1"
anyhow = "1"
log = "0.4"
rustc_plugin = {workspace = true}
rustc_utils = {workspace = true}