[package]
name = "rustc_plugin"
version = "0.5.30"
edition = "2021"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
description = "Framework for integrating a rustc plugin with Cargo"
repository = "https://github.com/willcrichton/flowistry"
license = "MIT"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
rustc_tools_util = "0.1"
log = "0.4"
cargo_metadata = "0.14"
serde = "1"
serde_json = "1"